First 2 render functions complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,3 +111,16 @@ footer {
     }
 
   }
+
+  .magazines-container{
+      display: flex;
+  }
+
+  .bold
+{
+    font-weight:bold;
+}
+
+b{
+    font-weight:bold; 
+}
